Some icons went missing. Some stuff got covered up by top reports area. Fixed

--- a/app/assets/stylesheets/webcat_index.scss
+++ b/app/assets/stylesheets/webcat_index.scss
@@ -483,7 +483,7 @@ table.dataTable tbody tr.submitting-entry {
 
 #webcat-index-title {
   line-height: 12px;
-  margin: 8px 0 10px 0;
+  margin: 40px 0 10px 0;
   width: auto;
   display: inline-block;
 }
